Fixed the dark mode toggle bug and added list/grid veiw toggle

--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,4 @@
 
 body {
     font-family: 'poppins';
-    background-color: chocolate;
 }
